# Autocrate

./: .autocrate.yaml  Cargo.toml  README.md  SECURITY.md
.gitea/workflows/: cargo.yaml
scripts/: publish.sh  release.sh
src/: error.rs  lib.rs  main.rs
src/changelog/: mod.rs
src/config/: cli.rs  mod.rs  packages.rs
src/git/: mod.rs
src/publish/: mod.rs
src/release/: mod.rs
src/serverapi/: forgejo.rs  gitea.rs  github.rs  gitlab.rs  mod.rs
