[package]
name = "autocrate"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3"
description = "Release Manager for Your Projects on Gitea, GitHub, and GitLab"
readme = "README.md"
homepage = "https://git.cscherr.de/PlexSheep/autocrate"
repository = "https://git.cscherr.de/PlexSheep/autocrate"
categories = ["command-line-utilities", "development-tools"]
keywords = [
  "ci",
  "cd",
  "continuous-integration",
  "continuous-delivery",
  "workflow-automation",
  "build-tool",
  "version-control",
  "gitea",
  "github",
  "gitlab",
  "changelog",
  "release-notes",
  "automated-builds",
]


[dependencies]
libpt = { version = "0.3.11", features = ["log"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
