[package]
name = "autocrate"
version = "0.1.0-prealpha.0"
edition = "2021"
publish = true
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "Release Manager for Your Projects on Gitea, GitHub, and GitLab"
readme = "README.md"
homepage = "https://git.cscherr.de/PlexSheep/autocrate"
repository = "https://git.cscherr.de/PlexSheep/autocrate"
categories = ["command-line-utilities", "development-tools"]
keywords = [
  "continuous-delivery",
  "workflow-automation",
  "gitea",
  "changelog",
  "automated-builds",
]


[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
clap-num = "1.1.1"
clap-verbosity-flag = "2.1.2"
git2 = "0.18.1"
libpt = { version = "0.3.11", features = ["log"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
thiserror = "1.0.56"

[[bin]]
name = "autocrate"
path = "src/main.rs"

[lib]
name = "autocrate"
path = "src/lib.rs"
