[package]
name = "autocrate"
version = "0.1.0-prealpha.2"
edition = "2021"
publish = true
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "Release Manager for Your Projects on Gitea, GitHub, and GitLab"
readme = "README.md"
homepage = "https://git.cscherr.de/PlexSheep/autocrate"
repository = "https://git.cscherr.de/PlexSheep/autocrate"
categories = ["command-line-utilities", "development-tools"]
keywords = [
  "continuous-delivery",
  "workflow-automation",
  "gitea",
  "changelog",
  "automated-builds",
]


[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
cargo = "0.76.0"
clap = { version = "4.4.18", features = ["derive", "help"] }
clap-verbosity-flag = "2.1.2"
git2 = "0.18.1"
libpt = { version = "0.3.11", features = ["log"] }
reqwest = "0.11.24"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
tempfile = "3.9.0"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["tokio-macros", "rt-multi-thread", "macros"] }
url = { version = "2.5.0", features = ["serde"] }

[[bin]]
name = "autocrate"
path = "src/main.rs"

[lib]
name = "autocrate"
path = "src/lib.rs"
